--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
 <li><strong>GitHub</strong> 关注度和活跃度持续攀升</li>
 </ul>
 
-<p>所有结合以上情况，之后会用以下技术栈基于 <strong>branch</strong> 做一个完善的案例</p>
+<p>所以结合以上情况，之后会用以下技术栈基于 <strong>branch</strong> 做一个完善的案例</p>
 
 <ul><li><strong>跨平台桌面应用框架：</strong><code>electron</code>  <i style="color:#aaa">（Chromium + Node.js）</i></li>
 <li><strong>UI库：</strong> <code>iView</code></li>
